# syt5-gek1011-timecritical-datatransmission-aust_neuwirth_stransky

./: CMakeLists.txt  README.md  doku.md  main.cpp
FreeRTOS/: CMakeLists.txt
FreeRTOS/ampelsteuerung/: CMakeLists.txt
